# GL4Framework

./: .gitattributes  .gitignore  .travis.yml  .ycm_extra_conf.py  App.cpp  App.hpp  CMakeLists.txt  camera.cpp  camera.h  compMesh.cpp  compMesh.hpp  defMeshNode.cpp  defMeshNode.hpp  deferredRenderer.cpp  deferredRenderer.hpp  do.py  forwardRenderer.hpp  glError.cpp  glError.h  importer.cpp  importer.hpp  kernels.cu  light.cpp  light.hpp  log.hpp  make.sh  makeHome.sh  makeLab.sh  makeMac.sh  meshNode.cpp  meshNode.hpp  object.h  pyConsole.cpp  pyConsole.h  rayTracer.cpp  rayTracer.h  readme.md  renderer.cpp  renderer.hpp  rendererDef.cpp  (+12 more)
assest/meshes/Su-35_SuperFlanker/: su-35.dae
assets/meshes/: StartFile.dae
assets/meshes/head/: head.dae
cmake/: Findassimp.cmake
doc/: doxygen.cfg
imgui/examples/opengl_example/: imgui_example
meshes/: StartFile.dae  mine.dae
meshes/Su-35_SuperFlanker/: Su-35_SuperFlanker.mtl
ref/: refMeshLoader.cpp
scripts/: do.py
scripts/YCM-Generator/: template.py
shaders/: defMesh_vs.glsl  deferredGeo_fs.glsl  deferredGeo_vs.glsl  defferedMesh_fs.glsl  defferedMesh_vs.glsl  mesh_fs.glsl  mesh_vs.glsl  pointTemp_fs.glsl  pointTemp_gs.glsl  pointTemp_vs.glsl  point_fs.glsl  point_gs.glsl  point_vs.glsl  screen_fs.glsl  screen_vs.glsl
shaders/kernels/: rayTracing.glsl  rayTracingComplete.glsl
src/app/: App.cpp  App.hpp  CMakeLists.txt  main.cpp  pyConsole.h
src/lib/: CMakeLists.txt
src/lib/camera/: CMakeLists.txt  fpsCamera.h
src/lib/camera/arcball/: arcball.cpp  arcball.h
src/lib/cameras/: arcball.h
src/lib/console/: CMakeLists.txt  LuaConsole.cpp  LuaConsole.h
src/lib/core/: CMakeLists.txt  ImguiConfig.cpp  ImguiConfig.hpp  camera.cpp  camera.h  imgui_impl_glfw_gl3.cpp  importer.cpp  importer.cpp.bak  importer.hpp  light.cpp  light.hpp  log.cpp  log.hpp  object.h  pyConsole.cpp  pyConsole.h  renderer.hpp  rendererManager.cpp  rendererManager.h  scene.cpp  scene.h  shader.cpp  shader.hpp  shaderManager.cpp  shaderManager.h
src/lib/objects/: CMakeLists.txt  GLSPH.h  compMesh.hpp  defMeshNode.cpp  defMeshNode.hpp  fluid.h  importer.hpp  mesh.hpp  meshNode.cpp  meshNode.hpp  object.h  points.cu  points.cuh
src/lib/objects/GLSPH/: GLSPH.h  fluid.cpp  fluid.h
src/lib/objects/base/: object.h
src/lib/objects/defMeshNode/: defMeshNode.hpp
src/lib/objects/meshNode/: meshNode.cpp  meshNode.hpp
src/lib/objects/point/: kernels.cu  points.cu  points.cuh
src/lib/renderers/: CMakeLists.txt  forwardRenderer.cpp  pointRenderTem.cpp  pointRenderTem.hpp  rayTracer.h  renderer.hpp  rendererManager.cpp  rendererManager.h
src/lib/renderers/deferredRenderer/: deferredRenderer.cpp  deferredRenderer.hpp
src/lib/renderers/forwardRenderer/: forwardRenderer.cpp  forwardRenderer.hpp
src/lib/renderers/pointRenderer/: pointRenderTem.cpp  pointRenderTem.hpp
src/lib/renderers/rayTracer/: rayTracer.cpp  rayTracer.h
src/script/: do.py
test/: CMakeLists.txt  testConsole.cpp
